3rdparty/proton-foundation-search-1.1.1/tests/snapshots/insert_text_index_with_buckets__insert-4.snap
---
source: packages/search/tests/insert_text_index_with_buckets.rs
expression: format_storage(&storage)
---
DC6574ACC8E153BBBCD02433027D6C7B: [
  -1,
  0,
  -2,
  2,
  -3,
  0,
  -4,
  1,
  3,
  -1,
  1,
  -2,
  2,
  -3,
  0,
  -4,
  1,
  4,
  -1,
  2,
  -2,
  20,
  -3,
  0,
  -4,
  10,
  30,
  -1,
  3,
  -2,
  200,
  -3,
  0,
  -4,
  1000,
  3000
]
BB23B41F96EF5080930516D5DC2082F8: {
  "vocabulary": {
    "next": 4,
    "tokens": [
      [
        0,
        "umos"
      ],
      [
        1,
        "lumo"
      ],
      [
        2,
        "plum"
      ],
      [
        3,
        "lumi"
      ]
    ],
    "trigrams": [
      [
        [
          "lum",
          0
        ],
        [
          1,
          3
        ]
      ],
      [
        [
          "lum",
          1
        ],
        [
          2
        ]
      ],
      [
        [
          "mos",
          1
        ],
        [
          0
        ]
      ],
      [
        [
          "plu",
          0
        ],
        [
          2
        ]
      ],
      [
        [
          "umi",
          1
        ],
        [
          3
        ]
      ],
      [
        [
          "umo",
          0
        ],
        [
          0
        ]
      ],
      [
        [
          "umo",
          1
        ],
        [
          1
        ]
      ]
    ]
  },
  "occurrences": [
    {
      "entries": [
        [
          1,
          2,
          2
        ],
        [
          10,
          20,
          1
        ],
        [
          1000,
          200,
          1
        ]
      ],
      "tokens": [
        0,
        1,
        2,
        3
      ],
      "occurrences": "DC6574ACC8E153BBBCD02433027D6C7B"
    }
  ]
}
