3rdparty/proton-foundation-search-1.1.1/tests/snapshots/insert_text_index_with_buckets__insert-8.snap
---
source: packages/search/tests/insert_text_index_with_buckets.rs
expression: format_storage(&storage)
---
9F258BA04D1F56E9A5B95490FDF649C3: [
  -1,
  3,
  -2,
  200,
  -3,
  0,
  -4,
  1000,
  3000
]
BE614E38C42558EF8C3790E97A6070A9: [
  -1,
  4,
  -2,
  20,
  -3,
  0,
  -4,
  10,
  30,
  -1,
  5,
  -2,
  200,
  -3,
  0,
  -4,
  100,
  300,
  -1,
  6,
  -2,
  200,
  -3,
  0,
  -4,
  100,
  400
]
BB23B41F96EF5080930516D5DC2082F8: released
DC6574ACC8E153BBBCD02433027D6C7B: released
B410382150B35A3FB2061D19CA35C3DF: {
  "vocabulary": {
    "next": 7,
    "tokens": [
      [
        3,
        "lumi"
      ],
      [
        4,
        "plums"
      ],
      [
        5,
        "fumo"
      ],
      [
        6,
        "zumo"
      ]
    ],
    "trigrams": [
      [
        [
          "fum",
          0
        ],
        [
          5
        ]
      ],
      [
        [
          "lum",
          0
        ],
        [
          3
        ]
      ],
      [
        [
          "lum",
          1
        ],
        [
          4
        ]
      ],
      [
        [
          "plu",
          0
        ],
        [
          4
        ]
      ],
      [
        [
          "umi",
          1
        ],
        [
          3
        ]
      ],
      [
        [
          "umo",
          1
        ],
        [
          5,
          6
        ]
      ],
      [
        [
          "ums",
          2
        ],
        [
          4
        ]
      ],
      [
        [
          "zum",
          0
        ],
        [
          6
        ]
      ]
    ]
  },
  "occurrences": [
    {
      "entries": [
        [
          1000,
          200,
          1
        ]
      ],
      "tokens": [
        3
      ],
      "occurrences": "9F258BA04D1F56E9A5B95490FDF649C3"
    },
    {
      "entries": [
        [
          10,
          20,
          1
        ],
        [
          100,
          200,
          2
        ]
      ],
      "tokens": [
        4,
        5,
        6
      ],
      "occurrences": "BE614E38C42558EF8C3790E97A6070A9"
    }
  ]
}
