3rdparty/proton-foundation-search-1.1.1/tests/snapshots/insert_text_index_with_buckets__insert_single_bucket-8.snap
---
source: packages/search/tests/insert_text_index_with_buckets.rs
expression: format_storage(&storage)
---
1106DF9FCB685C0082F9B8D3D1858F6F: [
  -1,
  3,
  -2,
  200,
  -3,
  0,
  -4,
  1000,
  3000,
  -1,
  4,
  -2,
  20,
  -3,
  0,
  -4,
  10,
  30,
  -1,
  5,
  -2,
  200,
  -3,
  0,
  -4,
  100,
  300,
  -1,
  6,
  -2,
  200,
  -3,
  0,
  -4,
  100,
  400
]
BB23B41F96EF5080930516D5DC2082F8: released
DC6574ACC8E153BBBCD02433027D6C7B: released
14062C6B8F7F52D4BCA46B6D11383E27: {
  "vocabulary": {
    "next": 7,
    "tokens": [
      [
        3,
        "lumi"
      ],
      [
        4,
        "plums"
      ],
      [
        5,
        "fumo"
      ],
      [
        6,
        "zumo"
      ]
    ],
    "trigrams": [
      [
        [
          "fum",
          0
        ],
        [
          5
        ]
      ],
      [
        [
          "lum",
          0
        ],
        [
          3
        ]
      ],
      [
        [
          "lum",
          1
        ],
        [
          4
        ]
      ],
      [
        [
          "plu",
          0
        ],
        [
          4
        ]
      ],
      [
        [
          "umi",
          1
        ],
        [
          3
        ]
      ],
      [
        [
          "umo",
          1
        ],
        [
          5,
          6
        ]
      ],
      [
        [
          "ums",
          2
        ],
        [
          4
        ]
      ],
      [
        [
          "zum",
          0
        ],
        [
          6
        ]
      ]
    ]
  },
  "occurrences": [
    {
      "entries": [
        [
          10,
          20,
          1
        ],
        [
          100,
          200,
          2
        ],
        [
          1000,
          200,
          1
        ]
      ],
      "tokens": [
        3,
        4,
        5,
        6
      ],
      "occurrences": "1106DF9FCB685C0082F9B8D3D1858F6F"
    }
  ]
}
